--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -46,7 +46,104 @@
     </section>
 
     <section>
-        <div>
+
+    <div class="container">
+
+                    <h2 class="text-center">Dernieres oeuvres en ligne</h2>
+                    
+                <div class="row ">
+
+                    <!-- OEUVRE 1 -->
+                    <div class="col-xl-2 col-lg-3 col-md-4">
+                        <article id="mea-o1" class="p-3">
+                            
+                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                            </img>
+                            <h3><a href="#">Name Art</a></h3>
+                            <span class="details-oeuvre">Name Artiste - date</span>
+                        </article>
+                    </div>
+
+                    <!-- OEUVRE 2 -->
+                    <div class=" col-xl-4 col-lg-5 col-md-6">
+                        <article id="mea-o2" class="p-3">
+                            
+                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                            </img>
+                            <h3><a href="#">Name Art</a></h3>
+                            <span class="details-oeuvre">Name Artiste - date</span>
+                        </article>
+                    </div>
+
+                    <!-- OEUVRE 3 -->
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <article id="mea-o1" class="p-3">
+                            
+                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                            </img>
+                            <h3><a href="#">Name Art</a></h3>
+                            <span class="details-oeuvre">Name Artiste - date</span>
+                        </article>
+                    </div>
+
+                    <!-- OEUVRE 4 -->
+                    <div class="col-xl-2 col-lg-3 col-md-4">
+                        <article id="mea-o4" class="p-3">
+                            
+                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                            </img>
+                            <h3><a href="#">Name Art</a></h3>
+                            <span class="details-oeuvre">Name Artiste - date</span>
+                        </article>
+                    </div>
+                        
+                    {# <div class="g-4 py-2"> #}
+
+                        <!-- OEUVRE 5 -->
+                        <div class="col-xl-4 col-lg-6 col-md-6">
+                            <article id="mea-o1" class="p-3">
+                                
+                                <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                                </img>
+                                <h3><a href="#">Name Art</a></h3>
+                                <span class="details-oeuvre">Name Artiste - date</span>
+                            </article>
+                        </div>
+
+                        <!-- OEUVRE 6 -->
+                        <div class="col-xl-2 col-lg-2 col-md-4">
+                            <article id="mea-o2" class="p-3">
+                                
+                                <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                                </img>
+                                <h3><a href="#">Name Art</a></h3>
+                                <span class="details-oeuvre">Name Artiste - date</span>
+                            </article>
+                        </div>
+
+                        <!-- OEUVRE 7 -->
+                        <div class="col-xl-2 col-lg-4 col-md-4">
+                            <article id="mea-o1" class="p-3">
+                                <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                                </img>
+                                <h3><a href="#">Name Art</a></h3>
+                                <span class="details-oeuvre">Name Artiste - date</span>
+                            </article>
+                        </div>
+
+                        <!-- OEUVRE 8 -->
+                        <div class="col-xl-4 col-lg-7 col-md-6">
+                            <article id="mea-o4" class="p-3">
+                                <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                                </img>
+                                <h3><a href="#">Name Art</a></h3>
+                                <span class="details-oeuvre">Name Artiste - date</span>
+                            </article>
+                        </div>
+                    {# </div> #}
+                </div>
+            </div>
+        {# <div>
             <div class="container-fluid">
 
                 <h2>Dernieres oeuvres en ligne</h2>
@@ -138,7 +235,7 @@
                             </article>
                         </div>
                     </div>
-                </div>
+                </div> #}
     </section>
     <div><a class="btn btn-warning">Voir toutes les oeuvres</a></div>
     <section>
