--- a/templates/membre/edit.html.twig
+++ b/templates/membre/edit.html.twig
@@ -1,33 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'bo_base.html.twig' %}
 
 {% block title %}Art d'un temps - Modifier membre {{ membre.pseudo }}{% endblock %}
 
-{% block body %}
-<section class="container-fluid bg-dark p-3">
-    <div class="container">
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb bg-dark">
-			  <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
-              <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
-			  <li class="breadcrumb-item"><a href="{{ path('membre_index')}}">Liste des membres</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Modifier Membre {{ membre.pseudo }}</li>
-			</ol>
-		</nav>
+{% block content %}
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-dark">
+            <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
+            <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('membre_index')}}">Liste des membres</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Modifier Membre {{ membre.pseudo }}</li>
+        </ol>
+    </nav>
     <h1>modifier Membre {{ membre.pseudo }}</h1>
     
-        <div class="card mt-3 mb-3">
-            <div class="card-body"> 
-                <!-- Faire la boucle gestion photo -->
-                <img class="rounded img-membre m-3" src="/images/avatar_default.png" alt="photo de profil">
-                {{ membre.photo }}
-            {{ include('membre/_form.html.twig', {'button_label': 'Update'}) }}
-            </div>
+    <div class="card mt-3 mb-3 bg-light">
+        <div class="card-body"> 
+            <!-- Faire la boucle gestion photo -->
+            <img class="rounded img-membre m-3" src="/images/avatar_default.png" alt="photo de profil">
+            {{ membre.photo }}
+        {{ include('membre/_form.html.twig', {'button_label': 'Update'}) }}
         </div>
-        <div class="d-flex justify-content-between">
-            <a href="{{ path('membre_index') }}"class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
-            {{ include('membre/_delete_form.html.twig') }}
-        </div>
-    
     </div>
-</section>
+
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('membre_index') }}"class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
+        {{ include('membre/_delete_form.html.twig') }}
+    </div>
+
 {% endblock %}
