--- a/templates/membre/index.html.twig
+++ b/templates/membre/index.html.twig
@@ -1,17 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends 'bo_base.html.twig' %}
 
 {% block title %}Art d'un temps - Liste des membres{% endblock %}
 
-{% block body %}
-<section class="container-fluid bg-dark p-3">
-    <div class="container">
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb bg-dark">
-			  <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
-              <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
-			  <li class="breadcrumb-item active" aria-current="page">Liste des membres</li>
-			</ol>
-		</nav>
+{% block content %}
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-dark">
+            <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
+            <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Liste des membres</li>
+        </ol>
+    </nav>
+    
     <h1>Liste des membres</h1>
 
     <table class="table mt-3">
@@ -60,7 +59,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('membre_new') }}" class="btn">Create new</a>
-    </div>
-</section>  
+    <a href="{{ path('membre_new') }}" class="btn">Nouveau membre</a> 
 {% endblock %}
