--- a/templates/membre/show.html.twig
+++ b/templates/membre/show.html.twig
@@ -1,93 +1,89 @@
-{% extends 'base.html.twig' %}
+{% extends 'bo_base.html.twig' %}
 
 {% block title %}Art d'un temps - Membre {{ membre.pseudo }}{% endblock %}
 
-{% block body %}
-<section class="container-fluid bg-dark p-3">
-    <div class="container">
-		<nav aria-label="breadcrumb">
-			<ol class="breadcrumb bg-dark">
-			  <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
-              <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
-			  <li class="breadcrumb-item"><a href="{{ path('membre_index')}}">Liste des membres</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Membre {{ membre.pseudo }}</li>
-			</ol>
-		</nav>
+{% block content %}
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb bg-dark">
+            <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
+            <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
+            <li class="breadcrumb-item"><a href="{{ path('membre_index')}}">Liste des membres</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Membre {{ membre.pseudo }}</li>
+        </ol>
+    </nav>
     <h1>Membre {{ membre.pseudo }}</h1>
-        <div class="card mt-3 mb-3">
-            <div class="card-body">  
-                <!-- Faire la boucle si pas de photo on affiche la photo par defaut -->
-                    <img class="rounded img-membre m-3" src="/images/avatar_default.png" alt="photo de profil">
-                    {{ membre.photo }}
-                    <a href="{{ path('membre_edit', {'id': membre.id}) }}" class="btn mb-3"><i class="fas fa-edit"></i> Modifier ce membre</a>   
- 
-                <table class="table">
-                    <tbody>
-                        <tr>
-                            <th>N° de Membre</th>
-                            <td>{{ membre.id }}</td>
-                        </tr>
-                        <tr>
-                            <th>Pseudo</th>
-                            <td>{{ membre.pseudo }}</td>
-                        </tr>
-                        <tr>
-                            <th>Mdp</th>
-                            <td>••••••</td>
-                        </tr>
-                        <tr>
-                            <th>Nom</th>
-                            <td>{{ membre.nom }}</td>
-                        </tr>
-                        <tr>
-                            <th>Prénom</th>
-                            <td>{{ membre.prenom }}</td>
-                        </tr>
-                        <tr>
-                            <th>Email</th>
-                            <td>{{ membre.email }}</td>
-                        </tr>
-                        <tr>
-                            <th>Ville</th>
-                            <td>{{ membre.ville }}</td>
-                        </tr>
-                        <tr>
-                            <th>Cp</th>
-                            <td>{{ membre.cp }}</td>
-                        </tr>
-                        <tr>
-                            <th>Adresse</th>
-                            <td>{{ membre.adresse }}</td>
-                        </tr>
-                        <tr>
-                            <th>Statut</th>
-                            <td>
-                                {% set texte = "" %}
-                                {% for role in membre.roles %}
+    <div class="card mt-3 mb-3">
+        <div class="card-body">  
+            <!-- Faire la boucle si pas de photo on affiche la photo par defaut -->
+                <img class="rounded img-membre m-3" src="/images/avatar_default.png" alt="photo de profil">
+                {{ membre.photo }}
+                <a href="{{ path('membre_edit', {'id': membre.id}) }}" class="btn mb-3"><i class="fas fa-edit"></i> Modifier ce membre</a>   
 
-                                    {% if role == "ROLE_ADMIN" %}
-                                        {% set texte = texte ~ (texte ? ", " : "") ~ "Administrateur" %}
-                                    {% elseif role == "ROLE_ARTISTE" %}
-                                    {% set texte = texte ~ (texte ? ", " : "") ~ "Artiste" %}
-                                    {% elseif role == "ROLE_MEMBRE" %}
-                                    {% set texte = texte ~ (texte ? ", " : "") ~ "Membre" %}   
-                                    {% endif %}   
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th>N° de Membre</th>
+                        <td>{{ membre.id }}</td>
+                    </tr>
+                    <tr>
+                        <th>Pseudo</th>
+                        <td>{{ membre.pseudo }}</td>
+                    </tr>
+                    <tr>
+                        <th>Mdp</th>
+                        <td>••••••</td>
+                    </tr>
+                    <tr>
+                        <th>Nom</th>
+                        <td>{{ membre.nom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Prénom</th>
+                        <td>{{ membre.prenom }}</td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td>{{ membre.email }}</td>
+                    </tr>
+                    <tr>
+                        <th>Ville</th>
+                        <td>{{ membre.ville }}</td>
+                    </tr>
+                    <tr>
+                        <th>Cp</th>
+                        <td>{{ membre.cp }}</td>
+                    </tr>
+                    <tr>
+                        <th>Adresse</th>
+                        <td>{{ membre.adresse }}</td>
+                    </tr>
+                    <tr>
+                        <th>Statut</th>
+                        <td>
+                            {% set texte = "" %}
+                            {% for role in membre.roles %}
 
-                                {% endfor %}
+                                {% if role == "ROLE_ADMIN" %}
+                                    {% set texte = texte ~ (texte ? ", " : "") ~ "Administrateur" %}
+                                {% elseif role == "ROLE_ARTISTE" %}
+                                {% set texte = texte ~ (texte ? ", " : "") ~ "Artiste" %}
+                                {% elseif role == "ROLE_MEMBRE" %}
+                                {% set texte = texte ~ (texte ? ", " : "") ~ "Membre" %}   
+                                {% endif %}   
 
-                                {{ texte }}
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+                            {% endfor %}
 
-        <div class="d-flex justify-content-between">
-            <a href="{{ path('membre_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
-        
-            {{ include('membre/_delete_form.html.twig') }}
+                            {{ texte }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-</section>
+
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('membre_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
+        {{ include('membre/_delete_form.html.twig') }}
+    </div>
+    
 {% endblock %}
