--- a/templates/evenement/_delete_form.html.twig
+++ b/templates/evenement/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('evenement_delete', {'id': evenement.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('evenement_delete', {'id': evenement.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet événement?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ evenement.id) }}">
     <button class="btn"><i class="fas fa-trash-alt"></i>Supprimer cet événement</button>
 </form>
